yaml_parser/tests/fail/directive-variants-1.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 1, column 9
  |
1 | %YAML1.1
  |         ^
invalid directive
